package Model;

import java.util.ArrayList;

public class Cart {
    private ArrayList<Product> productsInCart;
    private String id;
}
