package Model;

import java.util.ArrayList;

public class Score {
    private User user;
    private ArrayList<Float> score;
    private Product products;
}
