package Model;

import java.util.ArrayList;

public class User {
    protected String userName;
    protected String firstName;
    protected String lastName;
    protected String email;
    protected String phoneNumber;
    protected String password;
    protected static ArrayList<User> users = new ArrayList<>();
private float credit;
private ArrayList <Product>  userLog;


public boolean checkPattern(String string ){

    return false;
}

public static User getAccountByUserName(String account){
    return null;
}


}
